# RK_2

./: CMakeLists.txt  CPackConfig.cmake  Dockerfile  README.md  Vagrantfile
examples/: demo.cpp
include/: alpha.h  cos.h  count.h
sources/: alpha.cpp  cos.cpp  count.cpp
tests/: tests.cpp
